--- a/src/app/project/comment-periods/comment-periods.component.scss
+++ b/src/app/project/comment-periods/comment-periods.component.scss
@@ -1,3 +1,9 @@
 .breadcrumb {
   margin-left: 0;
 }
+
+.action-container {
+	.btn {
+		width: 214px;
+	}
+}
