--- a/src/app/project/project-detail/project-detail.component.scss
+++ b/src/app/project/project-detail/project-detail.component.scss
@@ -1,96 +1,8 @@
-@import "assets/styles/base/base.scss";
-
-$card-bg: #fff;
-$card-title-bg: #f7f8fa;
-$card-shadow: 0.02rem 0 0.2rem rgba(#000, 0.15);
-
-:host {
-  @include flex-box();
-  @include flex-direction(column);
-  @include flex(1 1 auto);
-  overflow: hidden;
-}
-
-.main-card {
-  background: $card-bg;
-  box-shadow: $card-shadow;
-}
+@import "assets/styles/components/details.scss";
 
 .breadcrumb {
   margin-left: 0;
-}
-
-.aside-card {
-  background: $card-bg;
-  box-shadow: $card-shadow;
-
-  + .aside-card {
-    margin-top: 1.5rem;
-  }
-
-  .title {
-    margin-bottom: 0;
-    padding: 1.1rem 1.5rem;
-    background: $card-title-bg;
-    font-size: 0.9375rem;
-    font-weight: 700;
-  }
-
-  .body {
-    padding: 1.25rem 1.5rem;
-    font-size: 0.9375rem;
-  }
-
-  .btn-container {
-    margin-top: 1.5rem;
-    text-align: center;
-  }
-
-  .cta-btn {
-    min-width: 12rem;
-    border-width: 2px;
-    font-weight: 700;
-
-    i {
-      margin-top: -0.2rem;
-      margin-left: -0.2rem;
-    }
-  }
-
-  .doc-list {
-    margin-top: 1rem;
-  }
-
-  .nv-list {
-    margin-top: -0.5rem;
-    margin-bottom: -0.5rem;
-    border: none;
-
-    li {
-      border: none;
-      padding: 0.2rem 0;
-    }
-
-    span.name {
-      flex: 0 0 8rem;
-    }
-  }
-}
-
-.vert-pipe {
-  margin-left: 1rem;
-  margin-right: 0.25rem;
-  display: inline-block;
-  width: 1px;
-  border-left: 1px solid #999;
-  vertical-align: middle;
-}
-
-h2 {
-  margin-bottom: 1rem;
-  letter-spacing: -0.02rem;
-  font-size: 1.2rem;
-  font-weight: 600;
+  margin-bottom: 30px;
 }
 
 section {
@@ -99,40 +11,36 @@ section {
   }
 }
 
-.nv-list {
-  border-bottom: 1px dotted #ccc;
-
-  li {
-    @include flex-box();
-    padding: 0.5rem 0;
-    border-top: 1px dotted #ccc;
-  }
-
-  span.name {
-    @include flex(0 0 12rem);
-    margin: 0;
-  }
-
-  span.value {
-    @include flex(1 1 auto);
-  }
-}
-
-.shapefile-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-
-  .interest-id {
-    .title {
-      display: block;
-      padding: 0.5rem 0;
-      font-size: 1rem;
-      font-weight: 600;
-    }
-  }
-}
-
 .bottom-container {
   overflow:hidden;
+}
+
+.people {
+  vertical-align: top;
+  i {
+    vertical-align: bottom;
+  }
+  .col {
+    padding: 0;
+    margin-bottom: 20px;
+    @media screen and (min-width: 800px) {
+      display: inline-block;
+      width: 32%;
+      margin-right: 1%;
+    }
+    vertical-align: top;
+  }
+}
+
+.action-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    ol {
+      flex: 100%;
+      margin-right: 20px;
+    }
+  }
+  .btn {
+    padding: 0.74rem 0.75rem;
+  }
 }
